# iRRAM

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  QUICKINSTALL_run_me  README.md  TODO  aclocal.m4  configure  configure.ac  index.html  libtool
doc/: Makefile.am  Makefile.in  iil.txt  reiterate.txt
doc/doxygen-350aa64/html/: COMPLEX_8cc.html  COMPLEX_8cc.js  COMPLEX_8cc__incl.map  COMPLEX_8cc__incl.md5  COMPLEX_8cc_source.html  COMPLEX_8h.html  COMPLEX_8h.js  COMPLEX_8h__incl.map  COMPLEX_8h__incl.md5  COMPLEX_8h_source.html  DYADIC_8cc.html  DYADIC_8cc__incl.map  DYADIC_8cc__incl.md5  DYADIC_8cc_source.html  DYADIC_8h.html  DYADIC_8h__incl.map  DYADIC_8h__incl.md5  DYADIC_8h_source.html  FUNCTION_8h.html  FUNCTION_8h_source.html  GMP__int__ext_8c.html  GMP__int__ext_8c.js  GMP__int__ext_8c__incl.map  GMP__int__ext_8c__incl.md5  GMP__int__ext_8c_source.html  GMP__intrat_8h.html  GMP__intrat_8h.js  GMP__intrat_8h__dep__incl.map  GMP__intrat_8h__dep__incl.md5  GMP__intrat_8h_source.html  GMP__rat__ext_8c.html  GMP__rat__ext_8c.js  GMP__rat__ext_8c__incl.map  GMP__rat__ext_8c__incl.md5  GMP__rat__ext_8c_source.html  INTEGER_8h.html  INTEGER_8h.js  INTEGER_8h__incl.map  INTEGER_8h__incl.md5  INTEGER_8h_source.html  (+980 more)
doc/doxygen-59e9394/html/: COMPLEX_8cc.html  COMPLEX_8cc__incl.map  COMPLEX_8cc__incl.md5  COMPLEX_8cc_source.html  COMPLEX_8h.html  COMPLEX_8h__dep__incl.map  COMPLEX_8h__incl.map  COMPLEX_8h__incl.md5  COMPLEX_8h_source.html  DYADIC_8cc.html  DYADIC_8cc__incl.map  DYADIC_8cc_source.html  DYADIC_8h.html  DYADIC_8h__dep__incl.md5  DYADIC_8h__incl.md5  DYADIC_8h_source.html  FUNCTION_8h.html  FUNCTION_8h.js  FUNCTION_8h__incl.md5  FUNCTION_8h_source.html  GMP__int__ext_8c.html  GMP__int__ext_8c_source.html  GMP__intrat_8h.html  GMP__intrat_8h__dep__incl.md5  GMP__intrat_8h__incl.md5  GMP__intrat_8h_source.html  GMP__rat__ext_8c.html  GMP__rat__ext_8c_source.html  INTEGER_8h.html  INTEGER_8h__incl.map  INTEGER_8h_source.html  INTERVAL_8cc.html  INTERVAL_8cc_source.html  INTERVAL_8h.html  INTERVAL_8h__dep__incl.md5  INTERVAL_8h__incl.map  INTERVAL_8h__incl.md5  INTERVAL_8h_source.html  LAZYBOOLEAN_8h.html  LAZYBOOLEAN_8h_source.html  (+390 more)
doc/doxygen-947ec88/html/: COMPLEX_8cc.html  COMPLEX_8cc__incl.map  COMPLEX_8cc__incl.md5  COMPLEX_8cc_source.html  COMPLEX_8h.html  COMPLEX_8h__dep__incl.md5  COMPLEX_8h__incl.map  COMPLEX_8h_source.html  DYADIC_8cc.html  DYADIC_8cc.js  DYADIC_8cc__incl.map  DYADIC_8cc_source.html  DYADIC_8h.html  DYADIC_8h_source.html  FUNCTION_8h.html  FUNCTION_8h.js  FUNCTION_8h__dep__incl.md5  FUNCTION_8h_source.html  GMP__int__ext_8c.html  GMP__int__ext_8c__incl.map  GMP__int__ext_8c__incl.md5  GMP__int__ext_8c_source.html  GMP__intrat_8h.html  GMP__intrat_8h__incl.md5  GMP__intrat_8h_source.html  GMP__rat__ext_8c.html  GMP__rat__ext_8c_source.html  INTEGER_8h.html  INTEGER_8h__dep__incl.map  INTEGER_8h__incl.map  INTEGER_8h__incl.md5  INTEGER_8h_source.html  INTERVAL_8cc.html  INTERVAL_8cc_source.html  INTERVAL_8h.html  INTERVAL_8h__dep__incl.md5  INTERVAL_8h_source.html  LAZYBOOLEAN_8h.html  LAZYBOOLEAN_8h__dep__incl.md5  LAZYBOOLEAN_8h_source.html  (+456 more)
doc/doxygen-9b85c59/html/: COMPLEX_8cc.html  COMPLEX_8cc__incl.map  COMPLEX_8cc__incl.md5  COMPLEX_8cc_source.html  COMPLEX_8h.html  COMPLEX_8h__dep__incl.md5  COMPLEX_8h__incl.map  COMPLEX_8h__incl.md5  COMPLEX_8h_source.html  DYADIC_8cc.html  DYADIC_8cc__incl.map  DYADIC_8cc__incl.md5  DYADIC_8cc_source.html  DYADIC_8h.html  DYADIC_8h__dep__incl.md5  DYADIC_8h__incl.map  DYADIC_8h__incl.md5  DYADIC_8h_source.html  FUNCTION_8h.html  FUNCTION_8h__dep__incl.map  FUNCTION_8h_source.html  GMP__int__ext_8c.html  GMP__int__ext_8c__incl.map  GMP__int__ext_8c__incl.md5  GMP__int__ext_8c_source.html  GMP__intrat_8h.html  GMP__intrat_8h__dep__incl.map  GMP__intrat_8h__dep__incl.md5  GMP__intrat_8h__incl.md5  GMP__intrat_8h_source.html  GMP__rat__ext_8c.html  GMP__rat__ext_8c__incl.map  GMP__rat__ext_8c__incl.md5  GMP__rat__ext_8c_source.html  INTEGER_8h.html  INTEGER_8h__dep__incl.md5  INTEGER_8h__incl.map  INTEGER_8h__incl.md5  INTEGER_8h_source.html  INTERVAL_8cc.html  (+811 more)
doc/doxygen-b1ada4d/html/: COMPLEX_8cc.html  COMPLEX_8cc_source.html  COMPLEX_8h.html  COMPLEX_8h_source.html  DYADIC_8cc.html  DYADIC_8cc__incl.md5  DYADIC_8cc_source.html  DYADIC_8h.html  DYADIC_8h__dep__incl.map  DYADIC_8h_source.html  FUNCTION_8h.html  FUNCTION_8h_source.html  GMP__int__ext_8c.html  GMP__int__ext_8c_source.html  GMP__intrat_8h.html  GMP__intrat_8h__dep__incl.map  GMP__intrat_8h_source.html  GMP__rat__ext_8c.html  GMP__rat__ext_8c__incl.md5  (+395 more)
examples/: .gitignore  CCC15-Lorenz-TM.cc  CCC15-vdP-TM.cc  MACIS15-itsyst-TM.cc  Makefile.in  TaylorModel.h  algebraic-BFMS.cc  choose-fn.cc  feig-2013.cc  fileio.cc  float_extension.cc  gamma_bernoulli.cc  harmonic.cc  itsyst3.cc  limit_example.cc  mp_extension.cc  pi_example.cc  probe.cc  quantifier-2014-01.cc  quantifier-2014-02.cc  sinus.cc  swanseatest.cc  test_DYADIC.cc  test_INTEGER.cc  test_commandline.cc  test_strings.cc  test_values.cc  thread_test.cc  timings-iRRAM.cc
include/: Makefile.am  Makefile.in  iRRAM.h
include/iRRAM/: COMPLEX.h  DYADIC.h  FUNCTION.h  GMP_intrat.h  INTEGER.h  INTERVAL.h  LAZYBOOLEAN.h  MPFR_interface.h  RATIONAL.h  REAL.h  REALMATRIX.h  SPARSEREALMATRIX.h  STREAMS.h  SWITCHES.h  TaylorModel.hh  cache.h  common.h  core.h  errno.h  helper-templates.hh  lib.h  limit_templates.h  pipe.h  pipe.hh  sizetype.hh  version.h.in
m4/: irram_threads_check.m4
src/: .gitignore  COMPLEX.cc  DYADIC.cc  GMP_int_ext.c  GMP_rat_ext.c  INTERVAL.cc  LAZY_BOOLEAN.cc  Makefile.am  RATIONAL.cc  REALLIB.cc  REALMATRIX.cc  REALS.cc  REALmain.cc  SPARSEREALMATRIX.cc  STREAMS.cc  TaylorModel.cc  convert.cc  errno.cc  exp_log.cc  limits.cc  pi_ln2.cc  pipe.cc  sin_cos.cc  sqrt.cc  stack.cc
src/MPFR/: .gitignore  MPFR_ext.c  MPFR_ext.h  mpfr_extension.cc
tests/: .gitignore  Makefile.am  Makefile.in  t_COMPLEX.cc  t_DYADIC.cc  t_FUNCTION.cc  t_INTEGER.cc  t_RATIONAL.cc  t_pipe-c.c  t_pipe-impl.cc  t_pipe.cc  t_string_conv.cc
(+1322 files in other folders)
